# DropBG

./: .gitignore  README.md  SECURITY.md  index.html  package.json  tsconfig.json  vite.config.ts
docs/: BENCHMARK.md  MODEL_RESEARCH.md  TODO.md  USAGE.md
docs/superpowers/plans/: 2026-06-30-figma-plugin-companion.md
docs/superpowers/specs/: 2026-06-30-figma-plugin-companion-design.md
figma-plugin/: README.md  code.js  manifest.json  ui.html
landing/: package.json
landing/src/layouts/: BaseLayout.astro
landing/src/pages/: index.astro
landing/src/styles/: global.css
scripts/: export_dynamic_matting_onnx.py  export_dynamic_onnx.py  export_hr_matting_onnx.py  export_matting_onnx.py
src/: App.css  App.tsx  index.css  tauri.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api_server.rs  commands.rs  lib.rs  main.rs
src-tauri/src/commands/: cloud.rs  editing.rs  inference.rs  model.rs  postprocess.rs  system.rs
src-tauri/src/imaging/: autocrop.rs  background.rs  decontaminate.rs  mod.rs
src-tauri/src/inference/: apple_vision.rs  backend.rs  cloud.rs  cloud_usage.rs  face_detect.rs  hires.rs  hr_refine.rs  mod.rs  postprocess.rs  preprocess.rs  refine.rs  session.rs  upscale.rs
src-tauri/src/model/: downloader.rs
src-tauri/swift-lib/: Package.swift
src-tauri/swift-lib/Sources/: vision.swift
src/components/: BatchList.tsx  BgReplace.tsx  DropZone.tsx  ModelSetup.tsx  Onboarding.tsx  Preview.tsx  Settings.tsx  Toast.tsx  Toolbar.tsx
web/: astro.config.mjs  package.json
web/src/layouts/: BaseLayout.astro
web/src/pages/: index.astro
web/src/styles/: global.css
