[package]
name = "dropbg"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ort = { version = "2.0.0-rc.12", features = ["coreml", "ndarray"] }
image = { version = "0.25", features = ["png", "jpeg", "webp"] }
ndarray = "0.17"
base64 = "0.22"
reqwest = { version = "0.12", features = ["blocking"] }
anyhow = "1"
dirs = "6"
tokio = { version = "1", features = ["fs", "rt"] }
open = "5"
