[package]
name = "dropbg"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }
swift-rs = { version = "1.0", features = ["build"] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ort = { version = "2.0.0-rc.12", features = ["coreml", "ndarray"] }
image = { version = "0.25", features = ["png", "jpeg", "webp"] }
ndarray = "0.17"
base64 = "0.22"
reqwest = { version = "0.12", features = ["blocking", "multipart", "json"] }
anyhow = "1"
dirs = "6"
tokio = { version = "1", features = ["fs", "rt"] }
open = "5"
swift-rs = "1.0"

# Release builds are optimized for a small shippable binary. ONNX Runtime (the
# bulk of the binary) is prebuilt native code, so opt-level "s" trims our Rust
# without hurting inference speed. `strip` drops symbols, LTO + a single codegen
# unit let the linker discard unused code. Panic unwinding is kept (not aborted)
# so a panic inside a spawn_blocking image-decode surfaces as a recoverable error.
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "unwind"
